tests/errors/sem_assignment_boolean.kt
fun main() {
val flag: Boolean = true
val number: Int = flag
}
